category dashboard and resourceController

--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -142,6 +142,7 @@
   "Read More": "En savoir plus",
   "Really delete this comment?": "Vous voulez vraiment supprimer ce Kommentaire ?",
   "Really delete this post?": "Vous voulez vraiment supprimer cet artiKle ?",
+  "Really delete this category?": "Vous voulez vraiment supprimer cette Katégorie ?",
   "Recovery Code": "Kode de réKupération",
   "Regards": "Salutations",
   "Register": "S'enregistrer",
