user dashboard and suppr feature

--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -143,6 +143,7 @@
   "Really delete this comment?": "Vous voulez vraiment supprimer ce Kommentaire ?",
   "Really delete this post?": "Vous voulez vraiment supprimer cet artiKle ?",
   "Really delete this category?": "Vous voulez vraiment supprimer cette Katégorie ?",
+  "Really delete this user?": "Voulez-vous vraiment supprimer cet utilisateur ?",
   "Recovery Code": "Kode de réKupération",
   "Regards": "Salutations",
   "Register": "S'enregistrer",
