contact feature and social link feature

--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -14,7 +14,7 @@
     "Administrator": "Administrateur",
     "All categories": "Toutes les Katégories",
     "All comments": "Tous les Kommentaires",
-    "All KontaKts": "Tous les KontaKts",
+    "All contacts": "Tous les KontaKts",
     "All follows": "Tous les liens",
     "All pages": "Toutes les pages",
     "All posts": "Tous les artiKles",
@@ -69,6 +69,7 @@
     "Follow Us": "Suivez-nous",
     "Follow": "Social",
     "Follows": "Liens sociaux",
+    "Follow Edit": "ModifiKation d'un lien social",
     "For your security, please confirm your password to continue.": "Pour votre séKurité, Konfirmez votre mot de passe pour Kontinuer.",
     "Forbidden": "Erreur 403, accès interdit",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Mot de passe oublié ? Pas de soucis. IndiKez votre adresse mail et vous recevrez un lien de réinitialisation.",
@@ -100,7 +101,7 @@
     "New": "Nouveau",
     "New comments": "Nouveaux Kommentaires",
     "New Comments": "Nouveaux Kommentaires",
-    "New KontaKts": "Nouveaux KontaKts",
+    "New contacts": "Nouveaux KontaKts",
     "New Password": "Nouveau mot de passe",
     "New Posts": "Nouveaux artiKles",
     "New posts": "Nouveaux artiKles",
@@ -145,6 +146,8 @@
     "Really delete this post?": "Vous voulez vraiment supprimer cet artiKle ?",
     "Really delete this category?": "Vous voulez vraiment supprimer cette Katégorie ?",
     "Really delete this user?": "Voulez-vous vraiment supprimer cet utilisateur ?",
+    "Really delete this contact?": "Voulez-vous vraiment supprimer ce contact ?",
+    "Really delete this link?": "Voulez-vous vraiment supprimer ce lien ?",
     "Recovery Code": "Kode de réKupération",
     "Regards": "Salutations",
     "Register": "S'enregistrer",
