page feature create update and delete

--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -148,6 +148,7 @@
     "Really delete this user?": "Voulez-vous vraiment supprimer cet utilisateur ?",
     "Really delete this contact?": "Voulez-vous vraiment supprimer ce contact ?",
     "Really delete this link?": "Voulez-vous vraiment supprimer ce lien ?",
+    "Really delete this page?": "Voulez-vous vraiment supprimer cette page ?",
     "Recovery Code": "Kode de réKupération",
     "Regards": "Salutations",
     "Register": "S'enregistrer",
