--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -81,6 +81,7 @@
     "Hello!": "Bonjour,",
     "hi": "salut",
     "Home": "AKueil",
+    "I have read and accept the site's privacy policy.": "J’ai lu et accepte la politique de confidentialité du site.",
     "If necessary, you may logout of all of your other browser sessions across all of your devices. If you feel your account has been compromised, you should also update your password.": "Si nécessaire, vous pouvez vous déKonnecter sur tous vos périphériKes. Si vous pensez que votre Kompte est Korrompu, mettez à jour votre mot de passe.",
     "If you did not create an account, no further action is required.": "Si vous n'êtes pas à l'origine de ce mail, ignorez et supprimez le ! Désolé pour la gène oKasionnée.",
     "If you did not receive the email": "Si vous n'avez pas reçu cet email",
@@ -255,4 +256,5 @@
     "You have been successfully updated": "Vos modifications ont bien été enregistrées",
     "Your Password": "Votre mot de passe",
     "Your Password if you want to change it": "Votre mot de passe si vous désirez le changer"
+
 }
