--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -50,7 +50,7 @@
     "Created.": "Kréé",
     "Current Password": "Mot de passe aKtuel",
     "Dashboard": "Tableau de bord",
-    "Delete Account": "Supprimer le Kompte",
+    "Delete account": "Supprimer le Kompte",
     "Delete": "Supprimer",
     "Disable": "DésaKtiver",
     "Disapprove": "Désapprouver",
@@ -151,6 +151,7 @@
     "Really delete this contact?": "Voulez-vous vraiment supprimer ce contact ?",
     "Really delete this link?": "Voulez-vous vraiment supprimer ce lien ?",
     "Really delete this page?": "Voulez-vous vraiment supprimer cette page ?",
+    "Really delete your account?": "Vraiment supprimer votre compte ?",
     "Recovery Code": "Kode de réKupération",
     "Regards": "Salutations",
     "Register": "S'enregistrer",
